Solved issue with x overflow of material Ui

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@ $baseColor: #2c3038;
 
 body {
     background-color: $baseColor;
+    overflow-x: hidden;
 }
 
 /**
